DATACOUCH-66 - Prepare 1.0 RC1 release.

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,31 @@
+Release Notes - Spring Data Couchbase - Version 1.0 RC1 - 2014-02-06
+--------------------------------------------------------------------
+** Bug
+    * [DATACOUCH-30] - ObjectMapper configuration must be supported
+    * [DATACOUCH-44] - Not consistent unit tests
+    * [DATACOUCH-47] - Connecting to multiple buckets fails
+    * [DATACOUCH-51] - update(java.util.Collection) adds new document object 
+    * [DATACOUCH-52] - CouchbaseCacheManager does not shutdown couchbase connections
+    * [DATACOUCH-53] - NPE on CouchbaseCache puting null 
+    * [DATACOUCH-58] - Allow null values for List elements and Map values
+
+** Improvement
+    * [DATACOUCH-14] - Enable default support for slf4j in couchbase-client
+    * [DATACOUCH-20] - @View annotation on repository finder methods
+    * [DATACOUCH-49] - Enhance @View "Query" params customization
+    * [DATACOUCH-56] - Update Couchbase Client to 1.2.3
+    * [DATACOUCH-57] - Allow for configuring of CouchbaseClient with property/SPEL expressions
+    * [DATACOUCH-60] - Upgrade Dependencies (Couchbase, Jackson, Commons)
+    * [DATACOUCH-62] - Upgrade couchbase java SDK to latest stable version
+    * [DATACOUCH-64] - Add View query methods to repositories
+    * [DATACOUCH-65] - Add @Version support on top of CAS for optimistic locking
+
+** New Feature
+    * [DATACOUCH-63] - support optimistic locking through CAS methods
+
+** Task
+    * [DATACOUCH-66] - Release 1.0 RC1
+
 Release Notes - Spring Data Couchbase - Version 1.0 M2 - 2013-11-14
 -------------------------------------------------------------------
 ** Bug
