--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,3 +1,5 @@
+Spring Data Couchbase Changelog
+===============================
 
 Release Notes - Spring Data Couchbase - Version 1.1 M1 - 2014-03-31
 -------------------------------------------------------------------
