--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.1.0.RC1 (2014-05-02)
+-----------------------------------------
+* DATACOUCH-84 - Release 1.1 RC1.
+* DATACOUCH-82 - Allow custom FieldNamingStrategies.
+
+
 Release Notes - Spring Data Couchbase - Version 1.1 M1 - 2014-03-31
 -------------------------------------------------------------------
 ** Task
