--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.1.1.RELEASE (2014-06-30)
+---------------------------------------------
+* DATACOUCH-95 - Release 1.1.1.
+
+
 Changes in version 1.1.0.RELEASE (2014-05-20)
 ---------------------------------------------
 * DATACOUCH-89 - Upgrade Java SDK to 1.4.1.
