--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.2.0.RC1 (2014-08-13)
+-----------------------------------------
+* DATACOUCH-101 - Release 1.2 RC1.
+* DATACOUCH-100 - Move to Asciidoctor for reference documentation.
+
+
 Changes in version 1.1.2.RELEASE (2014-07-28)
 ---------------------------------------------
 * DATACOUCH-99 - Release 1.1.2.
