--- a/src/main/asciidoc/preface.adoc
+++ b/src/main/asciidoc/preface.adoc
@@ -1,15 +1,15 @@
-[preface]
 [[couchbase.preface]]
 = Preface
 
 This reference documentation describes the general usage of the Spring Data Couchbase library.
 
 [[metadata]]
+[preface]
 == Project Information
 
-* Version control - `git://github.com/spring-projects/spring-data-couchbase.git`
+* Version control - https://github.com/spring-projects/spring-data-couchbase
 * Bugtracker - https://jira.springsource.org/browse/DATACOUCH
-* Release repository - http://repo.spring.io/libs-release
-* Milestone repository - http://repo.spring.io/libs-milestone
-* Snapshot repository - http://repo.spring.io/libs-snapshot
+* Release repository - https://repo.spring.io/libs-release
+* Milestone repository - https://repo.spring.io/libs-milestone
+* Snapshot repository - https://repo.spring.io/libs-snapshot
 
