--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.1.4.RELEASE (2014-08-27)
+---------------------------------------------
+* DATACOUCH-106 - Release 1.1.4.
+
+
 Changes in version 1.2.0.RC1 (2014-08-13)
 -----------------------------------------
 * DATACOUCH-101 - Release 1.2 RC1.
