--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.3.0.M1 (2014-12-01)
+----------------------------------------
+* DATACOUCH-116 - Release 1.3 M1.
+* DATACOUCH-113 - Ensure Spring 4.1 compatibility.
+
+
 Changes in version 1.2.1.RELEASE (2014-10-30)
 ---------------------------------------------
 * DATACOUCH-114 - Release 1.2.1.
