--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,17 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.3.0.RC1 (2015-03-05)
+-----------------------------------------
+* DATACOUCH-121 - Release 1.3 RC1.
+* DATACOUCH-120 - Update Java SDK to 1.4.7.
+* DATACOUCH-117 - Fix shaky builds.
+* DATACOUCH-110 - Custom converted objects in map/collection property are not serialized correctly.
+* DATACOUCH-109 - Add support for custom implementations in CDI repositories.
+* DATACOUCH-102 - Pass source object to AbstractCouchbaseEventListener's onBeforeDelete and onAfterDelete.
+* DATACOUCH-25 - Cache TTL (Time To Live) property required.
+
+
 Changes in version 1.2.2.RELEASE (2015-01-28)
 ---------------------------------------------
 * DATACOUCH-119 - Release 1.2.2.
