--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.3.0.RELEASE (2015-03-23)
+---------------------------------------------
+* DATACOUCH-122 - Release 1.3 GA.
+
+
 Changes in version 1.3.0.RC1 (2015-03-05)
 -----------------------------------------
 * DATACOUCH-121 - Release 1.3 RC1.
