--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.4.0.M1 (2015-06-02)
+----------------------------------------
+* DATACOUCH-127 - Release 1.4 M1 (Gosling).
+* DATACOUCH-126 - @EnableCouchbaseRespositories does not implement the `repositoryBaseClass` attribute.
+
+
 Changes in version 1.3.0.RELEASE (2015-03-23)
 ---------------------------------------------
 * DATACOUCH-122 - Release 1.3 GA.
