--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.2.3.RELEASE (2015-07-01)
+---------------------------------------------
+* DATACOUCH-131 - Release 1.2.3 (Evans).
+
+
 Changes in version 1.3.1.RELEASE (2015-06-30)
 ---------------------------------------------
 * DATACOUCH-132 - Release 1.3.1 (Fowler).
