--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,14 +1,24 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.1.6.RELEASE (2015-07-01)
+---------------------------------------------
+* DATACOUCH-133 - Fix typos in README.
+* DATACOUCH-130 - Release 1.1.6 (Dijkstra).
+* DATACOUCH-129 - Ensure Spring Framework 4.2 compatibility.
+
 Changes in version 1.2.3.RELEASE (2015-07-01)
 ---------------------------------------------
+* DATACOUCH-133 - Fix typos in README.
 * DATACOUCH-131 - Release 1.2.3 (Evans).
+* DATACOUCH-129 - Ensure Spring Framework 4.2 compatibility.
 
 
 Changes in version 1.3.1.RELEASE (2015-06-30)
 ---------------------------------------------
+* DATACOUCH-133 - Fix typos in README.
 * DATACOUCH-132 - Release 1.3.1 (Fowler).
+* DATACOUCH-129 - Ensure Spring Framework 4.2 compatibility.
 
 
 Changes in version 1.4.0.M1 (2015-06-02)
